<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/myColor2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnXreport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/makeXrep"/>

            <Button
                android:id="@+id/btnDiagnostics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/diagnostics"/>

            <Button
                android:id="@+id/btnFeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/lineFeed"/>

            <Button
                android:id="@+id/btnPrintLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/printLogo"/>

            <Button
                android:id="@+id/btnScan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/button_scan"/>

        </LinearLayout>

</LinearLayout>