<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/myColor2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chDelayPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/openBonWithDelayPrint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOpenFiscalReceipt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/openFiscalRcp"/>

                <Button
                    android:id="@+id/btnOpenNonFiscalReceipt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/openNonFiscalRcp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/freeText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtFreeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPrintFreeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/printFreeText"/>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/freeTextEsc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtFreeTextEsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chReversed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/reversed"/>

                <CheckBox
                    android:id="@+id/chLowFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/lowFont"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPrintFreeTextEsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/printFreeTextEsc"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/barcode"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"/>

                <Spinner
                    android:id="@+id/cbBarcodeType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/txtBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

                <Button
                    android:id="@+id/btnPrintBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/printBarcode"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCloseFiscalReceipt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/closeFiscalRcp"/>

                <Button
                    android:id="@+id/btnCloseNonFiscalReceipt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/closeNonFiscalRcp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sales"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>