<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/myColor2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnRead"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/readPLUbtn"/>

                <Button
                    android:id="@+id/btnFirstAvailable"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/readFirstAvailableBtn"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PLUnumber"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>


            <EditText
                android:id="@+id/txtPLUnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>


            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#002200"/>

            <!-- PLU Name -->

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PLUname"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtPLUname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#002200"/>

            <!-- PLU Price -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PLUprice"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtPLUprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#002200"/>

            <!-- PLU VAT Class -->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PLUflagOrigin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/txtPLUflagOrigin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PLUflagPrice"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/txtPLUflagPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PLUflagQTY"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/txtPLUflagQTY"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#002200"/>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DepNum"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtPLUdepNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/AvailableQty"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtPLUavailQTY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Barcode"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtPLUbarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>


            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#002200"/>

            <Button
                android:id="@+id/btnProgram"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/programPLUbtn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>